--- a/assets/css/index.style.css
+++ b/assets/css/index.style.css
@@ -1,12 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
+
+* {
+    font-family: "Poppins";
+}
+
+body {
+    text-align: center;
+    background-color: cornflowerblue;
+    font-family: "Poppins";
+    padding-top: 70px;
+}
+
 .erro {
     color: red;
 }
 
 .sucesso {
-    color: green;
+    color:  #1d7044;
 }
 
-img{
+img {
     width: 80px;
     height: 80px;
+}
+
+.input {
+    font-size: 12px;
+    display: flex;
+    padding-left: 50px;
+
+}
+
+#labelcontainer {
+    margin-top: 20px;
+    align-items: center;
+}
+
+#botao-cadastrar {
+    background-color:cornflowerblue;
+    color: #fff;
+    padding: 0.62rem 1.25rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 6px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+#input-birthday {
+    padding-left: 10px;
+}
+
+#stylecontainer {
+    max-width: 50rem;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 1.25rem;
+    border-radius: 15px;
+    box-shadow:  0 0 0.5rem rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+}
+
+#tituloprincipal {
+    text-align: center;
 }
