--- a/assets/css/index.style.css
+++ b/assets/css/index.style.css
@@ -1,14 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
 
-* {
-    font-family: "Poppins";
-}
-
 body {
-    text-align: center;
-    background-color: cornflowerblue;
+    background-color: #1d7044;
     font-family: "Poppins";
     padding-top: 70px;
+    margin: 0%;
 }
 
 .erro {
@@ -20,47 +16,107 @@ body {
 }
 
 img {
-    width: 80px;
-    height: 80px;
+    width: 30rem;
+    height: 30rem;
 }
 
 .input {
     font-size: 12px;
     display: flex;
-    padding-left: 50px;
-
-}
-
-#labelcontainer {
-    margin-top: 20px;
-    align-items: center;
 }
 
 #botao-cadastrar {
-    background-color:cornflowerblue;
+    background-color:#1d7044;
     color: #fff;
     padding: 0.62rem 1.25rem;
     border: none;
     cursor: pointer;
     border-radius: 6px;
     transition: background-color 0.3s ease, transform 0.3s ease;
+    margin-top: 0.5rem;
 }
 
-#input-birthday {
-    padding-left: 10px;
+.label {
+    justify-content: center;
 }
 
-#stylecontainer {
-    max-width: 50rem;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 1.25rem;
-    border-radius: 15px;
-    box-shadow:  0 0 0.5rem rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-}
 
 #tituloprincipal {
     text-align: center;
 }
+
+#container {
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 1.25rem;
+    border-radius: 0.31rem;
+    box-shadow:  0 0 0.5rem rgba(0, 0, 0, 0.1);
+    width: 100%;
+}
+
+#inputcontainer {
+    margin-left: 18rem;
+}
+
+header {
+    background: #1d7044;
+    color: white;
+    display: flex;
+    width: 100%;
+    height: 100px;
+    padding-bottom: 50px;
+    align-items: center;
+  }
+
+  #buttoncadastro{
+    background-color: #1d7044;
+    color: #fff;
+    padding: 2rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 6px;
+    margin-top: 0.5rem;
+    margin-left: 100px;
+    font-size: 18px;
+    
+  }
+
+  #buttonexibicao {
+    background-color: #1d7044;
+    color: #fff;
+    padding: 2rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 6px;
+    margin-top: 0.5rem;
+    margin-left: 70px;
+    font-size: 18px;
+  }
+
+  footer {
+    background-color: #1d7044;
+    text-align: center;
+    color: #fff;
+    height: 80px;
+  }
+
+  h1 {
+    color: white;
+    text-align: center;
+  }
+
+  #botoes {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+
+  .hidden {
+    display: none;
+  }
+
+  .petDetalhe {
+    background-color: #fff;
+
+  }
